// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateComponentMap - Snapshot Tests > should match snapshot for full config 1`] = `
"\`\`\`mermaid
graph TB
    %% Full Architecture

    subgraph Agents["Agents"]
        main_coordinator["👑 main-coordinator"]
        coder["🤖 coder"]
        tester["🎯 tester"]
    end

    subgraph MCP["MCP Servers"]
        mcp_github["🟢 github"]
        mcp_filesystem["🟢 filesystem"]
    end

    subgraph Skills["Skills"]
        skill_code_review["⚡ code-review"]
        skill_testing["⚡ testing"]
    end

    %% Agent Relationships
    main_coordinator --> coder
    main_coordinator --> tester
    coder -.-> mcp_github

    %% Styling
    classDef coordinator fill:#e1f5fe,stroke:#01579b
    classDef worker fill:#f3e5f5,stroke:#4a148c
    classDef reviewer fill:#fff3e0,stroke:#e65100
    classDef specialist fill:#e8f5e9,stroke:#1b5e20
    classDef disabled fill:#eeeeee,stroke:#9e9e9e,stroke-dasharray: 5 5
    classDef mcp fill:#fce4ec,stroke:#880e4f
    classDef skill fill:#e3f2fd,stroke:#0d47a1
    class main_coordinator coordinator
    class coder worker
    class tester specialist
    class mcp_github mcp
    class mcp_filesystem mcp
    class skill_code_review skill
    class skill_testing skill
\`\`\`"
`;

exports[`generateComponentMap - Snapshot Tests > should match snapshot for minimal config 1`] = `
"\`\`\`mermaid
graph TB
    %% Agent Architecture Component Map

    subgraph Agents["Agents"]
        test_agent["🤖 test-agent"]
    end

    %% Agent Relationships

    %% Styling
    classDef coordinator fill:#e1f5fe,stroke:#01579b
    classDef worker fill:#f3e5f5,stroke:#4a148c
    classDef reviewer fill:#fff3e0,stroke:#e65100
    classDef specialist fill:#e8f5e9,stroke:#1b5e20
    classDef disabled fill:#eeeeee,stroke:#9e9e9e,stroke-dasharray: 5 5
    classDef mcp fill:#fce4ec,stroke:#880e4f
    classDef skill fill:#e3f2fd,stroke:#0d47a1
    class test_agent worker
\`\`\`"
`;
